--- a/action.yml
+++ b/action.yml
@@ -193,6 +193,7 @@ runs:
 
         # Export Blazium Editor ENV
         if [ "$platform" == "macos" ]; then
+          echo "${{ inputs.bin-path }}/editor/Blazium.app/Contents/MacOS" >> $GITHUB_PATH
           echo "BLAZIUM_EDITOR=${{ inputs.bin-path }}/editor/Blazium.app/Contents/MacOS/Blazium" >> $GITHUB_ENV
         elif [ "$platform" == "linux" ]; then
           echo "BLAZIUM_EDITOR=${{ inputs.bin-path }}/editor/Blazium" >> $GITHUB_ENV
