--- a/action.yml
+++ b/action.yml
@@ -275,9 +275,9 @@ runs:
         
         echo "Unzipping template"
         if [ "$platform" == "macos" ]; then
-          mkdir -v -p /Users/runner/Library/Application Support/Blazium/export_templates
-          unzip ${{ inputs.bin-path }}/templates/$file -d /Users/runner/Library/Application Support/Blazium/export_templates/$version_dot
-          ls /Users/runner/Library/Application Support/Blazium/export_templates/$version_dot
+          mkdir -v -p "/Users/runner/Library/Application Support/Blazium/export_templates"
+          unzip ${{ inputs.bin-path }}/templates/$file -d "/Users/runner/Library/Application Support/Blazium/export_templates/$version_dot"
+          ls "/Users/runner/Library/Application Support/Blazium/export_templates/$version_dot"
         elif [ "$platform" == "linux" ]; then
           mkdir -v -p ~/.local/share/blazium/export_templates
           unzip ${{ inputs.bin-path }}/templates/$file -d ~/.local/share/blazium/export_templates/$version_dot
