--- a/action.yml
+++ b/action.yml
@@ -272,9 +272,11 @@ runs:
           mkdir -v -p "/Users/runner/Library/Application Support/Blazium/export_templates"
           unzip ${{ inputs.bin-path }}/templates/$file -d "/Users/runner/Library/Application Support/Blazium/export_templates/$version_dot"
           ls "/Users/runner/Library/Application Support/Blazium/export_templates/$version_dot"
+          echo "BLAZIUM_TEMPLATE=\"/Users/runner/Library/Application Support/Blazium/export_templates/$version_dot\"" >> $GITHUB_ENV
         elif [ "$platform" == "linux" ]; then
           mkdir -v -p ~/.local/share/blazium/export_templates
           unzip ${{ inputs.bin-path }}/templates/$file -d ~/.local/share/blazium/export_templates/$version_dot
           ls ~/.local/share/blazium/export_templates/$version_dot
+          echo "BLAZIUM_TEMPLATE=~/.local/share/blazium/export_templates/$version_dot" >> $GITHUB_ENV
         fi
 
