--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,10 +31,20 @@ jobs:
       - uses: blazium-engine/setup-blazium@master
         name: 🤖 Setup Blazium
         with:
-          version: 0.1.184-nightly
+          version: 0.3.74-nightly
           download_template: true
           platform: ${{ matrix.os.platform }}
 
       - name: 🔬 Verify Setup
         run: |
           Blazium --version
+      
+      - name: 🔬 Verify Blazium Template Installation
+        run: |
+          # Check that the template is installed
+          ls ${{ env.BLAZIUM_TEMPLATE }}
+          # Check that the template is not empty
+          if [ -z "$(ls -A ${{ env.BLAZIUM_TEMPLATE }})" ]; then
+            echo "Template is empty"
+            exit 1
+          fi
