--- a/action.yml
+++ b/action.yml
@@ -278,5 +278,10 @@ runs:
           unzip ${{ inputs.bin-path }}/templates/$file -d ~/.local/share/blazium/export_templates/$version_dot
           ls ~/.local/share/blazium/export_templates/$version_dot
           echo "BLAZIUM_TEMPLATE=~/.local/share/blazium/export_templates/$version_dot" >> $GITHUB_ENV
+        else
+          mkdir -v -p "C:/Users/runner/AppData/Roaming/Blazium/export_templates"
+          unzip ${{ inputs.bin-path }}/templates/$file -d "C:/Users/runner/AppData/Roaming/Blazium/export_templates/$version_dot"
+          ls "C:/Users/runner/AppData/Roaming/Blazium/export_templates/$version_dot"
+          echo "BLAZIUM_TEMPLATE=\"C:/Users/runner/AppData/Roaming/Blazium/export_templates/$version_dot\"" >> $GITHUB_ENV
         fi
 
