--- a/action.yml
+++ b/action.yml
@@ -1,33 +1,26 @@
-name: Setup Blazium CLI Action
+name: 'Blazium Setup'
 
-description: >-
-  Setup Blazium CLI for use with macOS, Windows, and Linux CI/CD runners.
+description: 'Setup Blazium CLI for use with macOS, Windows, and Linux CI/CD runners.'
 
-author: 'Blazium'
+author: 'blazium-engine'
 branding:
   icon: 'hard-drive'
   color: 'white'
 inputs:
   cli-version:
-    description: >-
-      Blazium CLI version: e.g., 0.0.13, 0.0.14, etc. Must include major, minor, and patch.
+    description: 'Blazium CLI version: e.g., 0.0.13, 0.0.14, etc. Must include major, minor, and patch.'
     default: 0.0.14
   version:
-    description: >-
-      Blazium Engine version: e.g., 0.1.184, 0.1.188, etc. Must include major, minor, and patch.
+    description: 'Blazium Engine version: e.g., 0.1.184, 0.1.188, etc. Must include major, minor, and patch.'
     required: true
   path:
-    description: >-
-      Path to install Blazium CLI to, relative to the current working directory of
-      the action.
+    description: 'Path to install Blazium CLI to, relative to the current working directory of the action.'
     default: 'blazium'
   downloads-path:
-    description: >-
-      Path to download Blazium CLI to, relative to the current working directory of
-      the action.
+    description: 'Path to download Blazium CLI to, relative to the current working directory of the action.'
     default: 'downloads'
   bin-path:
-    description: >-
+    description: |
       Path for binaries to be installed to, relative to the current working
       directory of the action. This is the path that will be added to the
       system path.
