--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ branding:
 inputs:
   cli-version:
     description: 'Blazium CLI version: e.g., 0.0.13, 0.0.14, etc. Must include major, minor, and patch.'
-    default: 0.0.14
+    default: '0.0.14'
   version:
     description: 'Blazium Engine version: e.g., 0.1.184, 0.1.188, etc. Must include major, minor, and patch.'
     required: true
