--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: blazium-engine/setup-blazium@master
+      - uses: blazium-engine/setup-blazium@add-latest-support-for-engine
         name: 🤖 Setup Blazium
         with:
           version: ${{ matrix.version }}
